# security-ghost

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/lib/: library.py  requirements.txt
src/security_ghost/: server.py  skeleton.py
tests/: conftest.py  test_skeleton.py
